syntax = "proto3";


option go_package = "cms/protocgen/core/v1/auth";

// Importing necessary dependencies
import "global/meta/meta.proto";

service AuthService {
    // rpc VerifyToken(AuthVerifyToken) returns (UserResponse);
    rpc LoginUser(LoginRequest) returns (UserResponse);
    rpc RegisterUser(RegisterRequest) returns (UserResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message UserResponse  {
    int64 id = 1;
    string name= 2;
    string email= 3;
    string role= 4;
    string token= 5;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string username = 3;
    string name = 4;
}